--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.1",
+    "@types/react": "~18.2.79",
+    "axios": "^1.7.1",
     "expo": "~51.0.2",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "^11.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
